--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -534,7 +534,7 @@ $offcanvas-size-horizontal: 100%;
 $offcanvas-background: rgba(0,0,0,0);
 // $offcanvas-color: isitlight($offcanvas-background);
 // $offcanvas-padding: 0;
-// $offcanvas-shadow: 3px 0 10px rgba(black, 0.25);
+$offcanvas-shadow: 3px 0 10px rgba(black, 0);
 // $offcanvas-animation-speed: 0.25s;
 
 // $offcanvas-frame-selector: '.grid-frame'; 
